Prevent spacers from overflowing into adjacent elements.

--- a/css/framework.css
+++ b/css/framework.css
@@ -28,6 +28,7 @@ table {border-collapse: collapse;}
 .row {width: 700px;}
 .row .row {width: 100%;}
 
+.spacer {overflow: hidden;}
 th.menu-item {display: inline;}
 
 /* Responsive Styles */
